changed elastic index location

--- a/website/src/main/resources/application-prod.properties
+++ b/website/src/main/resources/application-prod.properties
@@ -59,7 +59,7 @@ es.hostname=localhost
 es.portnumber=9300
 # the directory elasticsearch should store its data. If blank a data directory will be created in the directory
 # the application is running from and that will be used.
-es.data.path=${HOME}/data
+es.data.path=/data/es
 
 # App settings
 app.host=yorubaname.com
