Added support for logentries

--- a/website/pom.xml
+++ b/website/pom.xml
@@ -83,6 +83,19 @@
             <artifactId>ehcache</artifactId>
         </dependency>
 
+        <dependency>
+            <groupId>org.slf4j</groupId>
+            <artifactId>slf4j-api</artifactId>
+        </dependency>
+        <dependency>
+            <groupId>ch.qos.logback</groupId>
+            <artifactId>logback-classic</artifactId>
+        </dependency>
+        <dependency>
+            <groupId>com.logentries</groupId>
+            <artifactId>logentries-appender</artifactId>
+        </dependency>
+
     </dependencies>
     <properties>
         <newrelic-agent.version>3.24.1</newrelic-agent.version>
