--- a/pom.xml
+++ b/pom.xml
@@ -56,6 +56,7 @@
         <ehcache.version>2.10.1</ehcache.version>
         <hamcrest-all.version>1.3</hamcrest-all.version>
         <slf4j-api.version>1.7.13</slf4j-api.version>
+        <logentries-appender.version>1.1.32</logentries-appender.version>
     </properties>
 
     <dependencyManagement>
@@ -158,6 +159,11 @@
                 <groupId>ch.qos.logback</groupId>
                 <artifactId>logback-classic</artifactId>
                 <version>${logback-classic.version}</version>
+            </dependency>
+            <dependency>
+                <groupId>com.logentries</groupId>
+                <artifactId>logentries-appender</artifactId>
+                <version>${logentries-appender.version}</version>
             </dependency>
 
             <dependency>
