--- a/website/src/main/resources/application.properties
+++ b/website/src/main/resources/application.properties
@@ -22,9 +22,12 @@ server.tomcat.uri-encoding=UTF-8
 endpoints.shutdown.enabled=true
 
 # Template (Handlebars)
-spring.handlebars.cache=false
-spring.handlebars.prefix:classpath:website/
-spring.handlebars.suffix:.hbs
+handlebars.prefix: classpath:website/
+handlebars.suffix: .hbs
+handlebars.cache: true
+handlebars.registerMessageHelper: true
+handlebars.failOnMissingFile: false
+handlebars.prettyPrint: false
 
 # Static resource
 spring.resources.cache-period=86400
