--- a/pom.xml
+++ b/pom.xml
@@ -57,6 +57,7 @@
         <hamcrest-all.version>1.3</hamcrest-all.version>
         <slf4j-api.version>1.7.13</slf4j-api.version>
         <logentries-appender.version>1.1.32</logentries-appender.version>
+        <hsqldb.version>2.3.3</hsqldb.version>
     </properties>
 
     <dependencyManagement>
@@ -102,6 +103,13 @@
                 <artifactId>mysql-connector-java</artifactId>
                 <version>${mysql-connector.version}</version>
             </dependency>
+
+            <dependency>
+                <groupId>org.hsqldb</groupId>
+                <artifactId>hsqldb</artifactId>
+                <version>${hsqldb.version}</version>
+            </dependency>
+
             <dependency>
                 <groupId>org.elasticsearch</groupId>
                 <artifactId>elasticsearch</artifactId>
