--- a/webapi/pom.xml
+++ b/webapi/pom.xml
@@ -91,6 +91,10 @@
             <groupId>mysql</groupId>
             <artifactId>mysql-connector-java</artifactId>
         </dependency>
+        <dependency>
+            <groupId>org.hsqldb</groupId>
+            <artifactId>hsqldb</artifactId>
+        </dependency>
 
         <dependency>
             <groupId>com.google.guava</groupId>
