#35 Now also initializing ElasticSearch with some data when application is started outside of prod

--- a/pom.xml
+++ b/pom.xml
@@ -12,6 +12,7 @@
         <module>tts</module>
         <module>webapi</module>
         <module>importer</module>
+        <module>bootstrap</module>
         <module>auth</module>
         <module>elasticsearch</module>
         <module>website</module>
