#35 renamed init-module to bootstrap-module

--- a/bootstrap/pom.xml
+++ b/bootstrap/pom.xml
@@ -9,7 +9,7 @@
     </parent>
     <modelVersion>4.0.0</modelVersion>
 
-    <artifactId>init-module</artifactId>
+    <artifactId>bootstrap-module</artifactId>
     <description>Module that handles various bootstrapping operations </description>
 
     <dependencies>
