Fixing security configuration. Should resolve #25

--- a/website/src/main/resources/application-inmemory.properties
+++ b/website/src/main/resources/application-inmemory.properties
@@ -42,6 +42,7 @@ logging.file=../yorubaname.log
 
 #Logging
 logging.level.org.springframework.web=INFO
+logging.level.org.springframework.security=DEBUG
 logging.level.org.hibernate=INFO
 
 ##Security
