--- a/website/src/main/resources/application.properties
+++ b/website/src/main/resources/application.properties
@@ -17,6 +17,8 @@ spring.jpa.hibernate.ddl-auto=create
 #Server
 server.port=8081
 server.tomcat.uri-encoding=UTF-8
+server.compression.enabled=true
+server.compression.mime-types=text/html,text/plain,text/css,application/javascript,text/javascript
 
 # Management
 endpoints.shutdown.enabled=true
