Enabled Yoruba translation

--- a/website/src/main/resources/application.properties
+++ b/website/src/main/resources/application.properties
@@ -11,7 +11,7 @@ spring.datasource.sql-script-encoding=UTF-8
 
 spring.jpa.database=MYSQL
 spring.jpa.show-sql=true
-spring.jpa.hibernate.ddl-auto=create
+spring.jpa.hibernate.ddl-auto=validate
 
 
 #Server
