--- a/website/pom.xml
+++ b/website/pom.xml
@@ -26,6 +26,12 @@
 
         <dependency>
             <groupId>${project.groupId}</groupId>
+            <artifactId>jpa-search</artifactId>
+            <version>${project.version}</version>
+        </dependency>
+
+        <dependency>
+            <groupId>${project.groupId}</groupId>
             <artifactId>bootstrap-module</artifactId>
             <version>${project.version}</version>
         </dependency>
