--- a/jpasearch/pom.xml
+++ b/jpasearch/pom.xml
@@ -9,7 +9,7 @@
     </parent>
     <modelVersion>4.0.0</modelVersion>
 
-    <artifactId>jpa-search</artifactId>
+    <artifactId>jpa-search-module</artifactId>
 
     <dependencies>
 
