--- a/website/pom.xml
+++ b/website/pom.xml
@@ -26,7 +26,7 @@
 
         <dependency>
             <groupId>${project.groupId}</groupId>
-            <artifactId>jpa-search</artifactId>
+            <artifactId>jpa-search-module</artifactId>
             <version>${project.version}</version>
         </dependency>
 
