--- a/website/src/main/resources/application.properties
+++ b/website/src/main/resources/application.properties
@@ -26,7 +26,7 @@ endpoints.shutdown.enabled=true
 # Template (Handlebars)
 handlebars.prefix: classpath:website/
 handlebars.suffix: .hbs
-handlebars.cache: false
+handlebars.cache: true
 handlebars.registerMessageHelper: true
 handlebars.failOnMissingFile: false
 handlebars.prettyPrint: false
