--- a/website/src/main/resources/application.properties
+++ b/website/src/main/resources/application.properties
@@ -1,6 +1,6 @@
 # Datasource configuration
 spring.datasource.url=jdbc:mysql://localhost/dictionary?useUnicode=yes&characterEncoding=utf8
-spring.datasource.driverClassName=com.mysql.jdbc.Driver
+spring.datasource.driverClassName=com.mysql.cj.jdbc.Driver
 spring.datasource.username=dictionary
 spring.datasource.password=dictionary
 spring.datasource.test-on-borrow=true
